# micro-shop

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_18_1731-5554086726ce_create_products_table.py  2026_04_18_1746-1d167b119b40_create_users_table.py  2026_04_18_1759-5764b491d4c2_create_posts_table.py  2026_04_19_1802-70389be7e6e2_add_profile.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependecies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  post.py  user.py
users/: crud.py  schemas.py
